--- a/ChangeLogs.html
+++ b/ChangeLogs.html
@@ -2,6 +2,15 @@
 <body>
 <h1>CodeBlue CMS</h1>
 ===================================<br />
+<strong>Updated - 01/06/2016</strong>
+
+<p>* Added Blog Function with one catergory feature for starters (will add multiple catergory feature in later releases)<br />
+* Added to GitHub.<br />
+* Added Analytics Widget on front Dashboard<br />
+* Removed obsolete files and functions.<br />
+* Amalgamated similar functions to reduce overall footprint size.<br />
+* Few Minor Bugs Fixed.
+</p>
 <strong>Updated - 26/01/2016</strong>
 
 <p>* Added Session Variable to display Username<br />
